# embr-marytts

./: .gitignore  Embr.cabal  LICENSE  README  embr-marytts.cabal  test.sh
data/: phoneme-viseme.map
src/: Embr.hs  EmbrSocket.hs  Gesture.hs  MaryTTSInterface.hs  Paths_Embr.hs  SimpleSound.hs  Test.hs  Threading.hs
